# kb_tools

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
src/tools/: config.py  kb_completeness.py  log.py  prompt_correcter.py  retrieval.py  utils.py
src/tools/prompts/: correcting.md  kb_completeness.md  kb_completeness_human.md
